airflow/logs/dag_id=nightly_pipeline/run_id=manual__2026-05-23T034915.784173+0000/task_id=load_new_matches_from_rds/attempt=1.log
[2026-05-23T03:49:28.463+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: nightly_pipeline.load_new_matches_from_rds manual__2026-05-23T03:49:15.784173+00:00 [queued]>
[2026-05-23T03:49:28.477+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: nightly_pipeline.load_new_matches_from_rds manual__2026-05-23T03:49:15.784173+00:00 [queued]>
[2026-05-23T03:49:28.478+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 3
[2026-05-23T03:49:28.505+0000] {taskinstance.py:2192} INFO - Executing <Task(PythonOperator): load_new_matches_from_rds> on 2026-05-23 03:49:15.784173+00:00
[2026-05-23T03:49:28.515+0000] {standard_task_runner.py:60} INFO - Started process 247 to run task
[2026-05-23T03:49:28.521+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'nightly_pipeline', 'load_new_matches_from_rds', 'manual__2026-05-23T03:49:15.784173+00:00', '--job-id', '202', '--raw', '--subdir', 'DAGS_FOLDER/nightlypipeline.py', '--cfg-path', '/tmp/tmpsaubnoqk']
[2026-05-23T03:49:28.525+0000] {standard_task_runner.py:88} INFO - Job 202: Subtask load_new_matches_from_rds
[2026-05-23T03:49:28.628+0000] {task_command.py:423} INFO - Running <TaskInstance: nightly_pipeline.load_new_matches_from_rds manual__2026-05-23T03:49:15.784173+00:00 [running]> on host 74e8a7aa2252
[2026-05-23T03:49:28.799+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='you' AIRFLOW_CTX_DAG_ID='nightly_pipeline' AIRFLOW_CTX_TASK_ID='load_new_matches_from_rds' AIRFLOW_CTX_EXECUTION_DATE='2026-05-23T03:49:15.784173+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-05-23T03:49:15.784173+00:00'
[2026-05-23T03:49:32.042+0000] {nightlypipeline.py:146} INFO - 📅 Last successful run: 2026-05-23 03:45:30.668443+00:00
[2026-05-23T03:49:32.058+0000] {nightlypipeline.py:156} INFO - 📌 Creating new_matches table...
[2026-05-23T03:49:32.065+0000] {nightlypipeline.py:226} ERROR - ❌ Error in load_new_matches_from_rds: syntax error at or near ","
LINE 7:                         winner_id UUID ),
                                                ^
Traceback (most recent call last):
  File "/opt/airflow/dags/nightlypipeline.py", line 157, in load_new_matches_from_rds
    tgt_cur.execute("""
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 7:                         winner_id UUID ),
                                                ^

[2026-05-23T03:49:32.078+0000] {python.py:201} INFO - Done. Returned value was: 0
[2026-05-23T03:49:32.152+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=nightly_pipeline, task_id=load_new_matches_from_rds, execution_date=20260523T034915, start_date=20260523T034928, end_date=20260523T034932
[2026-05-23T03:49:32.193+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2026-05-23T03:49:32.268+0000] {taskinstance.py:3281} INFO - 1 downstream tasks scheduled from follow-on schedule check
